--- a/src/config/screens/Home.css
+++ b/src/config/screens/Home.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  max-width: 1920px;
 }
 
 .app-container{
@@ -11,6 +11,7 @@
 .pokemon-list{
 display: flex;
 flex-wrap: wrap;
+align-items: center;
 justify-content: center;
 }
 
